[package]
name = "rustlogic"
version = "0.1.0"
authors = ["march1917 <renyanjie01@gmail.com>"]
edition = "2018"
description = "A Rust Library for basic parsing and handling of logical formulas(forked from coastalwhite)"
homepage = "https://github.com/Rose1917/rustlogic"
repository = "https://github.com/coastalwhite/rustlogic.git"
license = "MIT"
readme = "./README.md"

keywords = ["logic", "parser", "circuit", "gate", "logical"]

categories = ["parser-implementations", "science"]
